fix annoying logo jumpy problem.

--- a/go/base/static/css/vumigo.less
+++ b/go/base/static/css/vumigo.less
@@ -36,14 +36,14 @@ body {
 
   li { 
     height:39px;
-    padding:0 20px;
+    padding:0 15px;
     border-right:1px #212527 solid;
   }
   ul li:first-child {
     // this is the logo
     padding:0;
   }
-  ul:last-child li:first-child {
+  ul:nth-child(2) li:first-child {
     border-left:1px #212527 solid;
   }
   li.active a { background:transparent !important; }
